2011-05-08  Andy Buckley  <andy@insectnation.org>

	* Extending aida2flat to have a better usage message, to accept
	input from stdin for command chaining via pipes, and to be a bit
	more sensibly internally structured (although it also now has to
	hold all histos in memory before writing out -- that shouldn't be
	a problem for anything other than truly huge histo files).

2011-05-04  Andy Buckley  <andy@insectnation.org>

	* compare-histos: If using --mc-errs style, prefer dotted and
	dashdotted line styles to dashed, since dashes are often too long
	to be distinguishable from solid lines. Even better might be to
	always use a solid line for MC errs style, and to add more colours.

	* rivet-mkhtml: use a no-mc-errors drawing style by default,
	to match the behaviour of compare-histos, which it calls. The
	--no-mc-errs option has been replaced with an --mc-errs option.

2011-05-04  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Ignore duplicate files in compare-histos.

2011-04-25  Andy Buckley  <andy@insectnation.org>

	* Adding some hadron-specific N and sumET vs. |eta| plots to MC_GENERIC.

	* Re-adding an explicit attempt to get the beam particles, since
	HepMC's IO_HERWIG seems to not always set them even though it's
	meant to.

2011-04-19  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added ATLAS_2011_S9002537 W asymmetry analysis

2011-04-14  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* deltaR, deltaPhi, deltaEta now available in all combinations of
	FourVector, FourMomentum, Vector3, doubles. They also accept jets
	and particles as arguments now.

2011-04-13  David Grellscheid <david.grellscheid@durham.ac.uk>

	* added ATLAS 8983313: 0-lepton BSM

2011-04-01  Andy Buckley  <andy@insectnation.org>

	* bin/rivet-mkanalysis: Don't try to download SPIRES or HepData
	info if it's not a standard analysis (i.e. if the SPIRES ID is not
	known), and make the default .info file validly parseable by YAML,
	which was an unfortunate gotcha for anyone writing a first
	analysis.
